--- a/isaacPage/styles.css
+++ b/isaacPage/styles.css
@@ -48,10 +48,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-div {
-    border: 1px solid red;
-}
-
 .wrapper {
     width: 100vw;
     height: 100vh;
@@ -64,6 +60,8 @@ div {
     display: flex;
     flex-direction: column;
     background-color: #223;
+    box-shadow: 20px 0px 30px 5px rgba(0,0,0,.3);
+    z-index: 1;
 }
 
 .navItems {
@@ -81,21 +79,28 @@ div {
     color: #FFF;
 }
 
+.navItems a:hover {
+    color: #aaa;
+}
+
 .main {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #667
 }
 
 .content {
     font-weight: 300;
-    font-size: 30px;
+    font-size: 40px;
+    width: 560px;
+    color: #FFF;
 }
 
 .content span {
     display: block;
-    padding: 10px 0 10px 0;
+    padding: 12px 0 12px 0;
 }
 
